# Geant4_Master

./: ActionInitialization.cc  ActionInitialization.hh  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  DetectorMessenger.cc  DetectorMessenger.hh  DoseResultDialog.cc  DoseResultsDialog.hh  EventAction.cc  EventAction.hh  README.md  Root_TestFile_Maker.py  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  extreme_shielding.cc  main.cc  root_analyser.py  shielding.cc  shielding_v2.cc
